Add `humanize-number` dependency

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "scripts": {
     "test": "tape test/index.js"
   },
+  "dependencies": {
+    "humanize-number": "^0.0.2"
+  },
   "devDependencies": {
     "lodash.isfunction": "^2.4.1",
     "tape": "^2.14.0"
