chore(tools): set up renovate
Closes https://github.com/KenanY/clickerheroes-format/pull/8

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "humanize-number": "^0.0.2"
   },
   "devDependencies": {
+    "@kenan/renovate-config": "^1.4.0",
     "lodash.isfunction": "^3.0.2",
     "tape": "^4.0.0"
   }
