--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "repository": "KenanY/clickerheroes-format",
   "license": "MIT",
-  "author": "Kenan Yildirim <kenan@kenany.me> (http://kenany.me/)",
+  "author": "Kenan Yildirim <kenan@kenany.me> (https://kenany.me/)",
   "main": "index.js",
   "files": [
     "index.js",
@@ -25,6 +25,6 @@
   "devDependencies": {
     "@kenan/renovate-config": "^1.5.1",
     "lodash.isfunction": "^3.0.9",
-    "tape": "^5.3.1"
+    "tape": "^5.4.0"
   }
 }
